--- a/src/app/company-list/company-list.component.html
+++ b/src/app/company-list/company-list.component.html
@@ -1,1 +1,17 @@
-<p>company-list works!</p>
+<table>
+    <thead>
+        <tr class="table-dark">
+            <td> Company Name</td>
+            <td> ASX Code</td>
+            <td> GSIC Industry Code</td>
+        </tr>
+    </thead>
+    <tbody class="table-light">
+        <tr *ngFor="let company of asxCompanies">
+            <td> {{company.companyName}} </td>
+            <td> {{company.asxCode}} </td>
+            <td> {{company.industryGroup}} </td>
+        </tr>
+
+    </tbody>
+</table>
