Fixing CORS request issue, adding update button
calling CORS proxy for http calls
adding "update list" button in top-bar  to get the latest asx company list

--- a/src/app/company-list/company-list.component.html
+++ b/src/app/company-list/company-list.component.html
@@ -1,9 +1,9 @@
 <table>
     <thead>
         <tr class="table-dark">
-            <td> Company Name</td>
-            <td> ASX Code</td>
-            <td> GSIC Industry Code</td>
+            <td> Company Name </td>
+            <td> ASX Code </td>
+            <td> GICS Industry Code </td>
         </tr>
     </thead>
     <tbody class="table-light">
