loading data asx, downloading file
changed loading data to asx live company list, not from local file.
added button to download company list as CSV file

--- a/src/app/company-list/company-list.component.html
+++ b/src/app/company-list/company-list.component.html
@@ -7,7 +7,7 @@
         </tr>
     </thead>
     <tbody class="table-light">
-        <tr *ngFor="let company of asxCompanies">
+        <tr *ngFor="let company of companiesArray">
             <td> {{company.companyName}} </td>
             <td> {{company.asxCode}} </td>
             <td> {{company.industryGroup}} </td>
