--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -19,8 +19,8 @@
         <a class="nav-link" href="#">About</a>
       </li>
     </ul>
-      <button class="btn btn-secondary my-2 my-sm-0" (click)="getCompanyListfromAsx()">
-        Update List
+      <button class="btn btn-secondary my-2 my-sm-0" (click)="downloadCompanyList()">
+        Download List
       </button>
   </div>
 </nav>
