--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -10,13 +10,13 @@
         <a class="nav-link" href="#"> ALL <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#"> Commodities </a>
+        <a class="nav-link" href="#"> Automobiles & Components </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#"> Equities </a>
+        <a class="nav-link" href="#"> Banks </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
+        <a class="nav-link" href="#"> About </a>
       </li>
     </ul>
       <button class="btn btn-secondary my-2 my-sm-0" (click)="downloadCompanyList()">
