final checkin with all the pages included
adding about details

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<app-top-bar></app-top-bar>
-<app-company-list></app-company-list>
+<div>
+	<app-top-bar></app-top-bar>
+	<div class="container">
+	   <router-outlet></router-outlet>
+	</div>
+</div>
