--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -7,16 +7,16 @@
   <div class="collapse navbar-collapse" id="navbarColor01">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#"> ALL <span class="sr-only">(current)</span></a>
+        <a class="nav-link" routerLink="asxListedCompanies"> ALL <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#"> Automobiles & Components </a>
+        <a class="nav-link"  routerLink="automobiles"> Automobiles & Components </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#"> Banks </a>
+        <a class="nav-link" routerLink="banks"> Banks </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#"> About </a>
+        <a class="nav-link" routerLink="about"> About </a>
       </li>
     </ul>
       <button class="btn btn-secondary my-2 my-sm-0" (click)="downloadCompanyList()">
